<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authentication_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationFragment">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_authentication"
        android:layout_marginBottom="@dimen/margin_authentication"
        android:orientation="vertical">

        <!-- IMAGE VIEW FIREBASE OC -->
        <ImageView
            android:layout_width="@dimen/image_dimension"
            android:layout_height="@dimen/image_dimension"
            android:background="@drawable/goyave"
            android:contentDescription="@string/image_authentication"
            android:layout_margin="@dimen/default_large_margin"/>

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold"
            android:layout_margin="@dimen/default_margin"/>

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/authentication_description"
            android:layout_margin="@dimen/default_margin"/>

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_margin="@dimen/default_large_margin">

            <!-- BUTTON LOGIN -->
            <Button
                android:id="@+id/authentication_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_text_not_logged"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"
                android:background="@drawable/rounded_shape_blue"
                style="?android:attr/borderlessButtonStyle"
                android:layout_margin="@dimen/default_large_margin"
                android:padding="@dimen/default_large_margin"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>