<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/home_title"
        android:text="@string/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        app:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/ingredients_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/home_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clear_button"/>

    <Button
        android:id="@+id/clear_button"
        android:text="@string/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_shape_gray"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/home_title"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_label">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

   <!-- <TextView
        android:id="@+id/chips_label"
        android:text="@string/chips_label"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fontFamily="casual"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/chips_group"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/chips_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="18dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/recipe_cuisine_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:chipSpacing="8dp"
            app:singleSelection="true" />
    </HorizontalScrollView> -->

    <LinearLayout
        android:id="@+id/linearlayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/search_button">
        <EditText
            android:id="@+id/ingredient_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="1"
            android:textStyle="italic"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            android:lineSpacingExtra="8sp"
            android:textColorLink="@android:color/white"
            android:backgroundTint="@android:color/darker_gray"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:hint="@string/ingredient_placeholder"
            android:layout_marginBottom="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"/>
        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_button"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@drawable/button_add_selector_color"
/>
    </LinearLayout>
    <!--  android:background="@drawable/rounded_shape_blue" -->

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_recipes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_shape_blue"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>