<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.frednm.explorefood.features.recipe.RecipeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecipeFragment">

        <!--  I remove this
        app:onRefreshListener="@{() -> viewmodel.userRefreshesItems()}"
        from the SwipeRefreshLayout-->
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/activity_home_swipe_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:showWhenLoading="@{viewmodel.recipes}" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    showWhenEmptyList="@{viewmodel.recipes}"
                    android:text="@string/no_network"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/colorError"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@id/image_empty_list"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/recipe_nsv"
                    app:layout_constraintTop_toBottomOf="@id/image_empty_list"
                    android:visibility="gone"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    showWhenEmptyList="@{viewmodel.recipes}"
                    app:srcCompat="@drawable/ic_error_red_24dp"
                    android:id="@+id/image_empty_list"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toStartOf="@id/error_message"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/image_error"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_nsv"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:visibility="gone" />

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/recipe_nsv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recipe_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            items="@{viewmodel.recipes}"
                            android:orientation="vertical"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="2"/>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

                <Button
                    android:id="@+id/search_restaurant_button"
                    android:text="@string/search_restaurants"
                    activateSearchButton="@{viewmodel.recipes}"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_shape_blue"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{viewmodel::userClicksOnSearchRestaurantButton}"
                    android:layout_marginEnd="50dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>